samples/_failures_safe/1761708979_a43a71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77dd65a7.c: In function ‘main’:
./samples/SAFE/__tmp_77dd65a7.c:140:9: error: expected expression at end of input
  140 |         destroy_matrix(&
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_77dd65a7.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77dd65a7.c:140:9: error: expected declaration or statement at end of input
